<resources>
    <string name="app_name" translatable="false">Cibus</string>
    <string name="msg_email_is_invalid">Email is invalid</string>
    <string name="msg_password_is_invalid">Password is invalid</string>
    <string name="msg_email_or_password_is_invalid">Invalid email or password, password must be at least 6 characters</string>
    <string name="msg_you_are_now_signed_up">You are now signed up</string>
    <string name="email_textView" translatable="false">Email</string>
    <string name="password_textView">Password</string>
    <string name="back_btn">Back</string>
    <string name="signup_btn">Signup</string>
    <string name="nav_bar_user">User</string>
    <string name="nav_bar_api_list">Home</string>
    <string name="nav_bar_add_recipe">Add new</string>
    <string name="search">Search</string>
    <string name="user_list_header">My recipes</string>
    <string name="email_editText">Enter email</string>
    <string name="password_editText">Enter password</string>
    <string name="login_btn">Login</string>
    <string name="signup_here_btn">Signup here!</string>
    <string name="msg_login_was_successful">Login was successful</string>
    <string name="msg_login_failed">Login failed</string>
    <string name="msg_signup_failed">Signup failed</string>
    <string name="msg_email_is_already_in_use">Email is already in use</string>
    <string name="name_textView">Name</string>
    <string name="name_editText">Enter name</string>
    <string name="Signup_header_textView">Sign Up</string>
    <string name="login_header_textview">Login</string>
    <string name="addNew_header_textView">Add New Recipe</string>
    <string name="recipeName_textView">Name of recipe:</string>
    <string name="recipeName_editText">Recipe Name</string>
    <string name="ingredientsHeading_textView">Ingredients:</string>
    <string name="measure_textView">Measure</string>
    <string name="measureHeading_textview">Measure:</string>
    <string name="measurements_editText">Number</string>
    <string name="unit_editText" translatable="false">ml/dl/g</string>
    <string name="ingredient_editText">Enter ingredient</string>
    <string name="instructionsHeading_textView">Instructions:</string>
    <string name="instructions_editText">Enter instructions</string>
    <string name="addBtn">Add Recipe</string>
    <string name="recipeName_hint">Enter name</string>   
    <string name="time_editView">In minutes</string>
    <string name="numberOfServings_editText">Enter number</string>
    <string name="country_header">Country:</string>
    <string name="number_of_servings">Number of Servings:</string>
    <string name="cook_time">Cook time:</string>
    <string name="preparation_time">Preparation time:</string>
    <string name="total_time">Total time: </string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="addFields_btn">Add Fields</string>
    <string name="unit">Unit:</string>
    <string name="subHeading">A world of recipes</string>
    <string name="instructions_empty">There are no instructions...</string>
    <string name="ratingBar">Rating Bar</string>
    <string name="logo_image_background">Logo image background</string>
    <string name="logo_image_foreground">Logo image foreground</string>
    <string name="recipe_updated">The recipe is now updated</string>
    <string name="added_recipe">The recipe is now added to your library</string>
    <string name="recipe_deleted">The recipe is now deleted</string>
    <string name="no_total_cooking_time">No total cooking time</string>
    <string name="min">" min"</string>
    <string name="find_new_recipes">Search for new recipes here</string>
</resources>