<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_header_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_subHeading_textView"
            style="@style/subHeadings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subHeading"
            app:layout_constraintStart_toStartOf="@+id/login_appName_textView"
            app:layout_constraintTop_toBottomOf="@+id/login_appName_textView" />

        <TextView
            android:id="@+id/login_appName_textView"
            style="@style/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            app:layout_constraintStart_toEndOf="@+id/login_logoBackground_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_logoBackground_imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/logo_image_background"
            app:layout_constraintBottom_toBottomOf="@+id/login_subHeading_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_appName_textView"
            app:srcCompat="@drawable/solid_rectangle"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/login_logoForeground_imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/logo_image_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/login_logoBackground_imageView"
            app:layout_constraintEnd_toEndOf="@+id/login_logoBackground_imageView"
            app:layout_constraintStart_toStartOf="@+id/login_logoBackground_imageView"
            app:layout_constraintTop_toTopOf="@+id/login_logoBackground_imageView"
            app:srcCompat="@drawable/ic_logo_cibus" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/login_email_textView"
        style="@style/custom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="56dp"
        android:text="@string/email_textView"
        app:layout_constraintEnd_toStartOf="@+id/login_email_editText"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/login_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password_textView"
        style="@style/custom_text"
        app:layout_constraintStart_toStartOf="@+id/login_email_textView"
        app:layout_constraintTop_toBottomOf="@+id/login_email_textView" />

    <EditText
        android:id="@+id/login_email_editText"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:ems="10"
        android:hint="@string/email_editText"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_email_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_email_textView" />

    <EditText
        android:id="@+id/login_password_editText"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_editText"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_password_textView"
        app:layout_constraintStart_toStartOf="@+id/login_email_editText"
        app:layout_constraintTop_toTopOf="@+id/login_password_textView" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_password_textView"
        app:layout_constraintTop_toBottomOf="@+id/login_password_textView" />

    <Button
        android:id="@+id/login_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_here_btn"
        app:layout_constraintBottom_toBottomOf="@+id/login_login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_password_editText"
        app:layout_constraintTop_toTopOf="@+id/login_login_btn" />

    <TextView
        android:id="@+id/login_header_textView"
        style="@style/headings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header_textview"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>