<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignupActivity">

    <TextView
        android:id="@+id/signup_email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/email_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/signup_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password_textView"
        app:layout_constraintStart_toStartOf="@+id/signup_email_textView"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <EditText
        android:id="@+id/signup_email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_email_textView"
        app:layout_constraintStart_toEndOf="@+id/signup_email_textView"
        app:layout_constraintTop_toTopOf="@+id/signup_email_textView" />

    <EditText
        android:id="@+id/signup_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_password_textView"
        app:layout_constraintStart_toStartOf="@+id/signup_email_editText"
        app:layout_constraintTop_toTopOf="@+id/signup_password_textView" />

    <Button
        android:id="@+id/signup_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/back_btn"
        app:layout_constraintStart_toStartOf="@+id/signup_password_textView"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_textView" />

    <Button
        android:id="@+id/signup_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/signup_btn"
        app:layout_constraintBottom_toBottomOf="@+id/signup_back_btn"
        app:layout_constraintStart_toEndOf="@+id/signup_back_btn"
        app:layout_constraintTop_toTopOf="@+id/signup_back_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>